Add next button to step 3

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="<%= root_path %>">
     <%= image_tag "cotala-logo-black-v2.png", width: '163.5px', height: '44px' %>
   </a>
 </nav>
