--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -54,6 +54,11 @@
         </div>
       </div>
     </div>
+    <div class="row no-gutters text-center">
+      <div class="col-6">
+        <button class='btn btn-primary theme-step-button w-100'>Next Step</button>
+      </div>
+    </div>
   </div>
 </section>
 <%= render 'tours/first_page/images_modal', tour: @tour %>
