--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -54,9 +54,9 @@
         </div>
       </div>
     </div>
-    <div class="row no-gutters text-center">
+    <div class="row no-gutters text-center mt-5">
       <div class="col-6">
-        <button class='btn btn-primary theme-step-button w-100'>Next Step</button>
+        <%= link_to 'Next Step', wizard_path(:step4, :tour_id => @tour.id), class: 'btn btn-primary theme-step-button w-100' %>
       </div>
     </div>
   </div>
