--- a/app/views/tours/step4.html.erb
+++ b/app/views/tours/step4.html.erb
@@ -106,6 +106,11 @@
         </div>
       </div>
     </div>
+    <div class="row no-gutters text-center mt-5">
+      <div class="col-6">
+        <%= link_to 'Next Step', wizard_path(:step5, :tour_id => @tour.id), class: 'btn btn-primary theme-step-button w-100' %>
+      </div>
+    </div>
   </div>
 </div>
 </section>
