Edit details in second page

--- a/app/views/tour_details/bedrooms.js.erb
+++ b/app/views/tour_details/bedrooms.js.erb
@@ -1,2 +1,2 @@
 $('#bedrooms_modal').modal('hide');
-$("#bedrooms_modal_link").html("<%= @tour.bedrooms %>");
+$("#bedrooms_modal_link").html("<%= @tour.bedrooms %> BED");
