--- a/app/views/tour_details/size.js.erb
+++ b/app/views/tour_details/size.js.erb
@@ -1,2 +1,2 @@
 $('#size_modal').modal('hide');
-$("#size_modal_link").html("<%= @tour.size %>");
+$("#size_modal_link").html("SIZE <%= @tour.size %>");
