--- a/app/views/tour_details/bathrooms.js.erb
+++ b/app/views/tour_details/bathrooms.js.erb
@@ -1,2 +1,2 @@
 $('#bathrooms_modal').modal('hide');
-$("#bathrooms_modal_link").html("<%= @tour.bathrooms %>");
+$("#bathrooms_modal_link").html("<%= @tour.bathrooms %> BATH");
