--- a/app/views/tour_details/tax.js.erb
+++ b/app/views/tour_details/tax.js.erb
@@ -1,2 +1,2 @@
 $('#tax_modal').modal('hide');
-$("#tax_modal_link").html("<%= @tour.tax %>");
+$("#tax_modal_link").html("TAXES <%= @tour.tax %>");
