--- a/app/views/tours/step4.html.erb
+++ b/app/views/tours/step4.html.erb
@@ -50,58 +50,58 @@
         </div>
         <div class="row no-gutters">
           <div class="col-12">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[4].name}", style: 'width: 100%' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.second_image}", style: 'width: 100%' %>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[5].name}", style: 'width: 100%'  %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.third_image}", style: 'width: 100%'  %>
           </div>
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[5].name}", style: 'width: 100%'  %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fourth_image}", style: 'width: 100%'  %>
           </div>
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[5].name}" , style: 'width: 100%' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fifth_image}" , style: 'width: 100%' %>
           </div>
         </div>
       </div>
       <div class="col-6" style="padding-top: 200px">
         <div class="row no-gutters">
           <div class="col-12" >
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[4].name}", style: 'width: 100%' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.sixth_image}", style: 'width: 100%' %>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[2].name}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.seventh_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %>
           </div>
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[3].name}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.eighth_image}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
           </div>
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[3].name}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[2].name}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %>
-          </div>
-          <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[3].name}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
-          </div>
-          <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[3].name}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.ninth_image}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[2].name}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.tenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %>
           </div>
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[3].name}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.eleventh_image}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
           </div>
           <div class="col-4">
-            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.images[3].name}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.twelfth_image}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-4">
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.thirteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %>
+          </div>
+          <div class="col-4">
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fourteenth_image}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
+          </div>
+          <div class="col-4">
+            <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fifteenth_image}", style: 'width: 100%; padding-top: 10px;padding-left: 7.5px' %>
           </div>
         </div>
       </div>
