--- a/app/views/tours/second_page/_description_modal.html.erb
+++ b/app/views/tours/second_page/_description_modal.html.erb
@@ -20,7 +20,7 @@
   </div>
 </div>
 <script>
-  $(document).ready(function() {
+  document.addEventListener("turbolinks:load", function() {
     $('.close').on("click", function() {
       $('#description_modal').modal('hide')
     })
