--- a/app/views/tours/first_page/_agent_phone_modal.html.erb
+++ b/app/views/tours/first_page/_agent_phone_modal.html.erb
@@ -20,7 +20,7 @@
   </div>
 </div>
 <script>
-  $(document).ready(function() {
+  document.addEventListener("turbolinks:load", function() {
     $('.close').on("click", function() {
       $('#agent_phone_modal').modal('hide')
     })
