--- a/app/views/tours/step5.html.erb
+++ b/app/views/tours/step5.html.erb
@@ -8,8 +8,15 @@
     </div>
     <div class="row no-gutters mt-5">
       <div class="col-3"></div>
-      <div class="col-6">
-        <%= link_to "Generate PDF", create_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button'%>
+      <div class="col-6 text-center">
+        <%= link_to "Preview PDF", create_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Generating PDF ..."} %>
+      </div>
+      <div class="col-3"></div>
+    </div>
+    <div class="row no-gutters mt-5">
+      <div class="col-3"></div>
+      <div class="col-6 text-center">
+        <%= link_to "Send to Cotala for Printing", "#", class:'btn btn-primary pdf-button' %>
       </div>
       <div class="col-3"></div>
     </div>
