Remove unused code

--- a/app/views/tour_details/agent_phone.js.erb
+++ b/app/views/tour_details/agent_phone.js.erb
@@ -1,2 +1,2 @@
-$('#agent_name_modal').modal('hide');
-$("#agent_name_modal_link").html("<%= @tour.agent_name %>");
+$('#agent_phone_modal').modal('hide');
+$("#agent_phone_modal_link").html("<%= @tour.agent_phone %>");
