--- a/app/views/tours/second_page/_description_modal.html.erb
+++ b/app/views/tours/second_page/_description_modal.html.erb
@@ -6,14 +6,13 @@
       </div>
       <div class="modal-body">
         <div class="row no-gutters">
-          <%= form_for @tour, url: wizard_path(:step3, :tour_id => @tour.id), method: :put, remote: true do |f| %>
-          <h6>Listing Features</h6>
+          <%= form_for @tour,  url: tour_detail_path(@tour, type: :description),  method: :put, remote: true do |f| %>
           <%= f.text_area :description, id:'description_text_area' %>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary close" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-secondary save">Save</button>
+        <button type="submit" class="btn btn-secondary save">Save</button>
         <% end %>
       </div>
     </div>
@@ -23,19 +22,6 @@
   document.addEventListener("turbolinks:load", function() {
     $('.close').on("click", function() {
       $('#description_modal').modal('hide')
-    })
-    $('.save').on("click", function() {
-      $('#description_modal').modal('hide');
-      $.ajax({
-        url: `/tours/step4?tour_id=<%= tour.id %>`,
-        method: 'put',
-        data: { tour: { description: $('#description_text_area').val() }},
-        success: function(response) {
-        },
-        error: function(response) {
-          console.log(response, 'response')
-        },
-      })
     })
   })
 </script>
