--- a/app/views/tour_details/description.js.erb
+++ b/app/views/tour_details/description.js.erb
@@ -1,2 +1,2 @@
-$('#desciption_modal').modal('hide');
-$("#desciption_modal_link").html("<%= @tour.desciption %>");
+$('#description_modal').modal('hide');
+$("#description_modal_link").html("<%= @tour.description %>");
