--- a/app/views/tours/second_page/_bedrooms_modal.html.erb
+++ b/app/views/tours/second_page/_bedrooms_modal.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="images_modal_title">Modal title</h5>
+        <h5 class="modal-title" id="images_modal_title">Edit Info</h5>
       </div>
       <div class="modal-body">
         <div class="row no-gutters">
