Fix descripitopn rows

--- a/app/views/tours/second_page/_description_modal.html.erb
+++ b/app/views/tours/second_page/_description_modal.html.erb
@@ -7,7 +7,7 @@
       <div class="modal-body">
         <div class="row no-gutters">
           <%= form_for @tour,  url: tour_detail_path(@tour, type: :description),  method: :put, remote: true do |f| %>
-          <%= f.text_area :description, id:'description_text_area' %>
+          <%= f.text_area :description, id:'description_text_area', rows: 14, cols: 50 %>
         </div>
       </div>
       <div class="modal-footer">
