Fix photos, floorplan and address

--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -12,7 +12,7 @@
         <small class="text-muted">(note that the display is approximate)</small>
       </h2>
       <div class="col-6" style="padding-top: 200px">
-        <%= image_tag 'https://images.squarespace-cdn.com/content/v1/5bdde6530dbda3230ba6bd5d/1542039146291-IY4AG1D0JN2D1400BZ1C/Matterport+-+Best+Practices+for+Schematic+Floor+Plans.jpg?format=1000w', style: 'transform: rotate(270deg); width: 700px' %>
+        <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg", style: 'width: 700px; padding-right: 20px' %>
       </div>
       <div class="col-6" style="padding-top: 200px">
         <div class="row no-gutters">
